[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI components/Dialog_.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/World/Pokemon_center.gd" type="Script" id=4]
[ext_resource path="res://Scenes/World/Non_playable_character.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 168, 32 )

[node name="Pokemon_center" type="Node2D"]
position = Vector2( 8, 8 )
script = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 480, 104 )

[node name="icon" type="Sprite" parent="Area2D"]
position = Vector2( 0, 7.62939e-06 )
scale = Vector2( 5.5, 1.125 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 464, 440 )

[node name="Dialog_" parent="." instance=ExtResource( 3 )]
margin_left = 752.0
margin_top = 248.0
margin_right = 752.0
margin_bottom = 248.0

[node name="Healing" type="GridContainer" parent="."]
margin_left = 664.0
margin_top = 224.0
margin_right = 886.0
margin_bottom = 294.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Healing"]
margin_right = 222.0
margin_bottom = 14.0
text = "Do you wanna heal your pokemon?"

[node name="CheckBox" type="CheckBox" parent="Healing"]
margin_top = 18.0
margin_right = 222.0
margin_bottom = 42.0
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox2" type="CheckBox" parent="Healing"]
margin_top = 46.0
margin_right = 222.0
margin_bottom = 70.0
text = "No"

[node name="Button" type="Button" parent="Healing"]
margin_top = 74.0
margin_right = 222.0
margin_bottom = 94.0
text = "ACCEPT"

[node name="Character" parent="." instance=ExtResource( 5 )]
position = Vector2( 136, 264 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="button_changed" from="Dialog_" to="." method="_on_Dialog__button_changed"]
[connection signal="pressed" from="Healing/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="Healing/CheckBox2" to="." method="_on_CheckBox2_pressed"]
[connection signal="pressed" from="Healing/Button" to="." method="_on_Button_pressed"]
[connection signal="change_dialog" from="Character" to="." method="_on_Character_change_dialog"]
[connection signal="show_dialog" from="Character" to="." method="_on_Character_show_dialog"]
